2012-08-04  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (call-with-debugging-environment): Use
	sb-debug::resolve-stack-top-hint instead of just
	sb-debug:*stack-top-hint*, because now it can contain things other
	than just frames.

2012-07-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Don't compile functions that are now in other files.

2012-06-19  Helmut Eller  <heller@common-lisp.net>

	* swank-ecl.lisp (wait-for-input): Provide implementation
	that doesn't need serve-event.

2012-06-12  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-changelog-date): Use
	(expand-file-name "ChangeLog" slime-path) instead of
	(concat slime-path "ChangeLog"), slime-path may not have a
	trailing /.
	Reported by Paul Sexton (lp#1011935).

2012-05-25  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-oneliner): Use minibuffer width instead of the
	width of the current frame, minibuffer can be in a separate frame
	with a different width.
	Patch by Greg Pfeil (lp#1004252).

2012-05-21  Helmut Eller  <heller@common-lisp.net>

	Reduce dependecy on pre-defined faces.

	* slime.el (slime-apropos-symbol, slime-apropos-label): New faces.
	(slime-print-apropos): Use them.

	Reported by: Daimrod <daimrod@gmail.com>

2012-05-12  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (stream-force-output): Undo last few changes.

2012-05-11  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (stream-force-output): Use with-world-lock
	i.e. with-recursive-lock instead of with-mutex.
	* slime.el (sbcl-world-lock): New test.

2012-05-11  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (stream-force-output): Don't use
	with-deadline. Grab the world-lock instead.
	(condition-timed-wait): Use the :timeout argument for real.

2012-05-11  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (call-with-io-timeout): Not used. Deleted.
	* swank-sbcl.lisp (call-with-io-timeout): Deleted.
