@@ -32,17 +32,17 @@
   (let ((packet (read-packet stream)))
     (handler-case (values (read-form packet package))
       (reader-error (c)
-        (error (make-condition 'swank-reader-error 
-                               :packet packet :cause c))))))
+        (error 'swank-reader-error 
+               :packet packet :cause c)))))
 
 (defun read-packet (stream)
   (let* ((length (parse-header stream))
          (octets (read-chunk stream length)))
     (handler-case (swank-backend:utf8-to-string octets)
       (error (c) 
-        (error (make-condition 'swank-reader-error 
-                               :packet (asciify octets)
-                               :cause c))))))
+        (error 'swank-reader-error 
+               :packet (asciify octets)
+               :cause c)))))
 
 (defun asciify (packet)
   (with-output-to-string (*standard-output*)
@@ -62,7 +62,7 @@
     (cond ((= count length)
            buffer)
           ((zerop count)
-           (error (make-condition 'end-of-file :stream stream)))
+           (error 'end-of-file :stream stream))
           (t
            (error "Short read: length=~D  count=~D" length count)))))
 
